# rs-quantum-computing

./: .env.sample  .gitignore  Cargo.toml  README.md  docker-compose.yml  test.ipynb
.devcontainer/: Dockerfile  devcontainer.json
src/: main.rs
src/lib/: circuit.rs  gate.rs  lib.rs  observable.rs  state.rs
src/lib/gate/: gate_base.rs  gate_hadamard.rs
